--- a/ontology-gwt-widgets/src/main/java/au/csiro/eis/ontology/gwt/widgets/xtemplates/owlclasstemplate.html
+++ b/ontology-gwt-widgets/src/main/java/au/csiro/eis/ontology/gwt/widgets/xtemplates/owlclasstemplate.html
@@ -1,3 +1,3 @@
-<p>Name: {data.name}</p>
-<p style="font:10px arial,sans-serif">URI: {data.iri}</p>
+<h3>Name: {data.name}</h3>
+<p class="classIriLabel"><a href="{data.iri}" target="out">{data.iri}</a></p>
 
